--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,6 @@
-@import url(../blocks/base/base.css);
+@import url(../vendor/normalize.css);
+
+@import url(../vendor/fonts/opensans.css);
+@import url(../vendor/fonts/formular.css);
 
 @import url(../blocks/header/header.css);
