--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,4 @@
+
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/opensans.css);
 @import url(../vendor/fonts/formular.css);
@@ -8,6 +9,7 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__container/header__container.css);
 @import url(../blocks/header/__info/header__info.css);
+@import url(../blocks/header/__container/header__container.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__geo/header__geo.css);
 @import url(../blocks/header/__city/header__city.css);
