--- a/blocks/header/__city/header__city.css
+++ b/blocks/header/__city/header__city.css
@@ -3,4 +3,13 @@
     line-height: 22px;
     font-weight: 400;
     margin: 0 60px 0 0;
+    max-width: 100px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+@media screen and (max-width: 500px) {
+    .header__city {
+        display: none;
+    }
 }
