--- a/blocks/header/__favorites-count/header__favorites-count.css
+++ b/blocks/header/__favorites-count/header__favorites-count.css
@@ -1,3 +1,8 @@
 .header__favorites-count {
     margin: 0 30px 0 0;
 }
+@media screen and (max-width: 545px) {
+    .header__favorites-count {
+        display: none;
+    }
+}
