--- a/blocks/header/__favorites/header__favorites.css
+++ b/blocks/header/__favorites/header__favorites.css
@@ -6,3 +6,8 @@
     margin: 0 10px 0 0;
     padding: 0;
 }
+@media screen and (max-width: 545px) {
+    .header__favorites {
+        display: none;
+    }
+}
