--- a/blocks/header/__info/header__info.css
+++ b/blocks/header/__info/header__info.css
@@ -4,3 +4,8 @@
     align-items: center;
     justify-content: space-between;
 }
+@media screen and (max-width: 1000px) {
+    .header__info {
+        flex-direction: column;
+    }
+}
