--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,3 +3,8 @@
     margin: 0 16px 0 0;
     transform: translateY(-3px);
 }
+@media screen and (max-width: 400px) {
+    .header__logo {
+        width: 66px;
+    }
+}
