--- a/blocks/header/__search/header__search.css
+++ b/blocks/header/__search/header__search.css
@@ -1,7 +1,7 @@
 .header__search {
 	-webkit-appearance: none;
     box-sizing: border-box;
-    width: 50%;
+    max-width: 50%;
     height: 48px;
     padding: 0 8px 0 45px;
     border: none;
@@ -31,12 +31,12 @@
 }
 @media screen and (max-width: 1200px) {
     .header__search {
-        width: 40%;
+        max-width: 40%;
     }
 }
 @media screen and (max-width: 1000px) {
     .header__search {
-        width: 80%;
+        max-width: 100%;
     }
 }
 @media screen and (max-width: 545px){
@@ -44,10 +44,10 @@
         display: none;
         position: fixed;
         top: 48px;
-        left: 10%;
-        right: 10%;
+        left: 12px;
+        right: 12px;
         z-index: 3;
-        animation: start 1s ease-in-out forwards;
+        animation: skroll 12s ease-in-out infinite, start 1s ease-in-out forwards;
     }
 }
 .header__search_active {
