--- a/blocks/header/__search/header__search.css
+++ b/blocks/header/__search/header__search.css
@@ -2,6 +2,7 @@
 	-webkit-appearance: none;
     box-sizing: border-box;
     max-width: 50%;
+    min-width: 50%;
     height: 48px;
     padding: 0 8px 0 45px;
     border: none;
@@ -32,11 +33,14 @@
 @media screen and (max-width: 1200px) {
     .header__search {
         max-width: 40%;
+        min-width: 40%;
     }
 }
 @media screen and (max-width: 1000px) {
     .header__search {
         max-width: 100%;
+        min-width: 80%;
+        margin: 12px 0 0 0;
     }
 }
 @media screen and (max-width: 545px){
