--- a/blocks/header/__geo/header__geo.css
+++ b/blocks/header/__geo/header__geo.css
@@ -28,6 +28,13 @@
         background: url("../../../img/location.svg") 3px 3px / 12px no-repeat;
     }
 }
+@media screen and (max-width: 1000px) {
+    .header__geo {
+        width: 24px;
+        height: 24px;
+        background: url("../../../img/location.svg") 3px 3px / 14px no-repeat;
+    }
+}
 @media screen and (max-width: 500px) {
     .header__geo {
         width: 28px;
