--- a/blocks/header/__mobile-hamb/header__mobile-hamb.css
+++ b/blocks/header/__mobile-hamb/header__mobile-hamb.css
@@ -8,3 +8,8 @@
     height: 32px;
     background: url("../../../img/hamburger.svg") center/cover no-repeat;
 }
+@media screen and (max-width: 1000px) {
+    .header__mobile-hamb {
+        display: block;
+    }
+}
