--- a/blocks/header/__city/header__city.css
+++ b/blocks/header/__city/header__city.css
@@ -8,7 +8,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-device-width: 500px) {
     .header__city {
         display: none;
     }
