--- a/blocks/header/__geo/header__geo.css
+++ b/blocks/header/__geo/header__geo.css
@@ -14,28 +14,23 @@
     border-color: #f1f1f1;
     background-color: #f1f1f1;
 }
-@media screen and (max-width: 1400px) {
+@media screen and (max-device-width: 1400px) {
     .header__geo {
         width: 24px;
         height: 22px;
-        background: url("../../../img/location.svg") 3px / 12px no-repeat;
+        background-position: 3px;
+        background-size: 12px;
     }
 }
-@media screen and (max-width: 1200px) {
-    .header__geo {
-        width: 24px;
-        height: 21px;
-        background: url("../../../img/location.svg") 3px 3px / 12px no-repeat;
-    }
-}
-@media screen and (max-width: 1000px) {
+@media screen and (max-device-width: 1000px) {
     .header__geo {
         width: 24px;
         height: 24px;
-        background: url("../../../img/location.svg") 3px 3px / 14px no-repeat;
+        background-position: 3px 3px;
+        background-size: 14px;
     }
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-device-width: 500px) {
     .header__geo {
         width: 28px;
         height: 28px;
