--- a/blocks/header/__search-btn/header__search-btn.css
+++ b/blocks/header/__search-btn/header__search-btn.css
@@ -11,12 +11,12 @@
     right: 65px;
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (max-device-width: 620px) {
     .header__search-btn {
         display: block;
     }
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-device-width: 500px) {
     .header__search-btn {
         right: 120px;
     }
