--- a/blocks/header/__search/header__search.css
+++ b/blocks/header/__search/header__search.css
@@ -30,14 +30,14 @@
     border: 2px solid #9db9db;
     background-position-x: 14px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-device-width: 1200px) {
     .header__search {
         max-width: 40%;
         min-width: 40%;
         animation: skroll 8s ease-in-out infinite;
     }
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-device-width: 1000px) {
     .header__search {
         max-width: 100%;
         min-width: 80%;
@@ -45,7 +45,7 @@
         animation: none;
     }
 }
-@media screen and (max-width: 620px){
+@media screen and (max-device-width: 620px){
     .header__search {
         display: none;
         position: fixed;
@@ -56,7 +56,7 @@
         animation: start 1s ease-in-out forwards;
     }
 }
-@media screen and (max-width: 460px){
+@media screen and (max-device-width: 460px){
     .header__search {
         animation: skroll 12s ease-in-out infinite, start 1s ease-in-out forwards;
     }
