--- a/blocks/menu/menu.css
+++ b/blocks/menu/menu.css
@@ -4,7 +4,7 @@
     white-space: nowrap;
     overflow: hidden;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-device-width: 1000px) {
     .menu {
         display: none;
     }
