--- a/blocks/header/__info/header__info.css
+++ b/blocks/header/__info/header__info.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: space-between;
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-device-width: 1000px) {
     .header__info {
         flex-direction: column;
     }
