--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,21 +1,22 @@
 .header {
-    background-color: #FFF;
-    padding: 0 calc((100vw - 1280px) / 2);
+    max-width: 1280px;
+    margin: 0 auto;
     height: 136px;
     border-bottom: 1px solid #ddd;
     font-family: 'Open Sans';
+    background-color: #FFF;
 }
-@media screen and (max-width: 1400px) {
+@media screen and (max-device-width: 1400px) {
     .header {
         padding: 0 calc((100vw - 1080px) / 2);
     }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-device-width: 1200px) {
     .header {
         padding: 0 calc((100vw - 880px) / 2);
     }
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-device-width: 1000px) {
     .header {
         padding: 0 32px;
     }
