--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,16 +8,8 @@
 }
 @media screen and (max-device-width: 1400px) {
     .header {
-        padding: 0 calc((100vw - 1080px) / 2);
-    }
-}
-@media screen and (max-device-width: 1200px) {
-    .header {
-        padding: 0 calc((100vw - 880px) / 2);
-    }
-}
-@media screen and (max-device-width: 1000px) {
-    .header {
-        padding: 0 32px;
+        padding: 0 5%;
+        margin: 0;
+        max-width: 90%;
     }
 }
