--- a/blocks/header/__container/header__container.css
+++ b/blocks/header/__container/header__container.css
@@ -3,11 +3,17 @@
     display: flex;
     align-items: center;
 }
-.header__container:last-child {
+.header__container_last {
+    width: 25%;
+    display: flex;
+    align-items: center;
     justify-content: end;
 }
 @media screen and (max-device-width: 1200px) {
     .header__container {
+        width: 30%;
+    }
+    .header__container_last {
         width: 30%;
     }
 }
@@ -17,7 +23,9 @@
         justify-content: start;
         margin: 0 0 12px 0;
     }
-    .header__container:last-child {
+    .header__container_last {
+        width: 100%;
+        margin: 0 0 12px 0;
         position: absolute;
         right: 32px;
         top: 20px;
