--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
     max-width: 1280px;
-    margin: 0 auto;
+    padding: 0 calc((100% - 1280px) / 2);
     height: 136px;
     border-bottom: 1px solid #ddd;
     font-family: 'Open Sans';
