--- a/blocks/header/__geo/header__geo.css
+++ b/blocks/header/__geo/header__geo.css
@@ -6,7 +6,7 @@
     z-index: 1;
     cursor: pointer;
     border: 1px solid #d3d3d3;
-    border-radius: 50%;
+    border-radius: 50px;
     transition: all .1s ease-in-out;
 }
 .header__geo:hover {
