--- a/blocks/header/__mobile-hamb/header__mobile-hamb.css
+++ b/blocks/header/__mobile-hamb/header__mobile-hamb.css
@@ -13,3 +13,10 @@
         display: block;
     }
 }
+@media screen and (max-width: 620px) {
+    .header__mobile-hamb {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+}
