--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,7 @@
 @import url(../blocks/content/content.css);
 
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__content/header__content.css);
 @import url(../blocks/header/__container/header__container.css);
 @import url(../blocks/header/__info/header__info.css);
 @import url(../blocks/header/__logo/header__logo.css);
