--- a/blocks/header/__geo/header__geo.css
+++ b/blocks/header/__geo/header__geo.css
@@ -1,7 +1,13 @@
 .header__geo {
-    width: 32px;
+    width: 200px;
     height: 32px;
-    margin: 0 8px 0 0;
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     background: url("../../../img/location.svg") 5px 5px / 18px no-repeat;
     z-index: 1;
     cursor: pointer;
@@ -13,29 +19,31 @@
     border-color: #f1f1f1;
     background-color: #f1f1f1;
 }
-@media screen and (max-device-width: 1400px) {
+@media screen and (max-width: 1400px) {
     .header__geo {
-        width: 24px;
-        height: 22px;
-        background-position: 3px;
-        background-size: 12px;
+        width: 150px;
+        padding: 0 12px 0 0;
+        text-align: end;
     }
 }
-@media screen and (max-device-width: 1000px) {
+@media screen and (max-width: 1000px) {
     .header__geo {
-        width: 24px;
-        height: 24px;
-        background-position: 3px 3px;
-        background-size: 14px;
+        margin: 0 40% 0 0;
     }
 }
-@media screen and (max-device-width: 500px) {
+@media screen and (max-width: 800px) {
     .header__geo {
-        width: 28px;
-        height: 28px;
-        background: url("../../../img/location.svg") 4px 4px / 16px no-repeat;
-        position: absolute;
-        top: 22px;
-        right: 88px;
+        margin: 0 20% 0 0;
+    }
+}
+@media screen and (max-width: 620px) {
+    .header__geo {
+        margin: 0 20px 0 0;
+    }
+}
+@media screen and (max-width: 620px) {
+    .header__geo {
+        color: rgba(255, 255, 255, 0);
+        width: 32px;
     }
 }
