--- a/blocks/header/__search/header__search.css
+++ b/blocks/header/__search/header__search.css
@@ -14,35 +14,40 @@
     font-size: 14px;
     line-height: 22px;
 }
-@media screen and (max-device-width: 1200px) {
+@media screen and (max-width: 1200px) {
     .header__search {
         max-width: 40%;
         min-width: 40%;
         animation: skroll 8s ease-in-out infinite;
     }
 }
-@media screen and (max-device-width: 1000px) {
+@media screen and (max-width: 1000px) {
     .header__search {
+        position: absolute;
         max-width: 100%;
         min-width: 80%;
-        margin: 12px 0 0 0;
+        margin: 0;
         animation: none;
+        top: 70px;
+        left: 10%;
     }
 }
-@media screen and (max-device-width: 620px){
+@media screen and (max-width: 620px){
     .header__search {
         display: none;
         position: fixed;
         top: 48px;
-        left: 12px;
-        right: 12px;
+        left: 16px;
+        right: 16px;
         z-index: 3;
         animation: start 1s ease-in-out forwards;
     }
 }
-@media screen and (max-device-width: 460px){
+@media screen and (max-width: 470px){
     .header__search {
         animation: skroll 12s ease-in-out infinite, start 1s ease-in-out forwards;
+        left: 10px;
+        right: 10px;
     }
 }
 .header__search::-webkit-search-cancel-button { 
@@ -60,5 +65,4 @@
     background-color: #FFF;
     border: 2px solid #9db9db;
     background-position-x: 14px;
-    animation: none;
 }
