--- a/blocks/back-popup/back-popup.css
+++ b/blocks/back-popup/back-popup.css
@@ -6,5 +6,6 @@
     right: 0;
     bottom: 0;
     z-index: 2;
-    background-color: rgba(144, 144, 144, 0.8);
+    background-color: rgba(31, 31, 31, 0.8);
+    transition: all .5s;
 }
