--- a/blocks/header/__container/header__container.css
+++ b/blocks/header/__container/header__container.css
@@ -1,34 +1,21 @@
 .header__container {
-    width: 25%;
-    display: flex;
-    align-items: center;
+    max-width: 1280px;
+    position: relative;
+    margin: 0 auto;
 }
-.header__container_last {
-    width: 25%;
-    display: flex;
-    align-items: center;
-    justify-content: end;
-}
-@media screen and (max-device-width: 1200px) {
+@media screen and (max-width: 1400px) {
     .header__container {
-        width: 30%;
-    }
-    .header__container_last {
-        width: 30%;
+        max-width: 1080px;
     }
 }
-@media screen and (max-device-width: 1000px) {
+@media screen and (max-width: 1200px) {
     .header__container {
-        width: 100%;
-        justify-content: start;
-        margin: 0 0 12px 0;
+        max-width: 880px;
     }
-    .header__container_last {
-        width: 100%;
-        margin: 0 0 12px 0;
-        position: absolute;
-        right: 32px;
-        top: 20px;
-        margin: 0;
+}
+@media screen and (max-width: 1000px) {
+    .header__container {
+        max-width: 1000px;
+        padding: 0 0 0 24px;
     }
 }
