--- a/blocks/header/__info/header__info.css
+++ b/blocks/header/__info/header__info.css
@@ -12,8 +12,11 @@
 }
 @media screen and (max-width: 620px) {
     .header__info {
-        position: absolute;
-        right: 0;
-        top: 0;
+        justify-content: space-evenly;
+    }
+}
+@media screen and (max-width: 620px) {
+    .header__info {
+        justify-content: space-around;
     }
 }
