--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,8 +5,6 @@
 }
 @media screen and (max-width: 620px) {
     .header__logo {
-        position: fixed;
-        top: 20px;
-        left: 16px;
+        margin: 0 20% 0 0;
     }
 }
