--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,8 @@
 
 @import url(../blocks/root/root.css);
 @import url(../blocks/content/content.css);
+@import url(../blocks/search/search.css);
+@import url(../blocks/close-btn/close-btn.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__container/header__container.css);
@@ -36,5 +38,9 @@
 
 @import url(../blocks/back-popup/back-popup.css);
 
+@import url(../blocks/popup-geo/popup-geo.css);
+@import url(../blocks/popup-geo/__container/popup-geo__container.css);
+@import url(../blocks/popup-geo/__search/popup-geo__search.css);
+@import url(../blocks/popup-geo/__select-button/popup-geo__select-button.css);
 
 @import url(../blocks/active/active.css);
