feat: начал делать основную информацию университета

--- a/pages/index.css
+++ b/pages/index.css
@@ -45,6 +45,10 @@
 @import url(../blocks/lead/__btn/lead__btn.css);
 @import url(../blocks/lead/__crump-cansel/lead__crump-cansel.css);
 
+@import url(../blocks/lead/__description/lead__description.css);
+@import url(../blocks/lead/__list/lead__list.css);
+@import url(../blocks/lead/__list-item/lead__list-item.css);
+
 @import url(../blocks/back-popup/back-popup.css);
 
 @import url(../blocks/popup-geo/popup-geo.css);
