--- a/blocks/lead/__btn/lead__btn.css
+++ b/blocks/lead/__btn/lead__btn.css
@@ -26,12 +26,16 @@
   color: rgba(6, 86, 180, 1);
   right: 20px;
 }
-
+@media screen and (max-width: 700px) {
+  .lead__btn {
+    bottom: 210px;
+  }
+}
 @media screen and (max-width: 550px) {
   .lead__btn {
     height: 40px;
     left: 20px;
-    bottom: 140px;
+    bottom: 20px;
     font-size: 11px;
     padding: 0 12px;
   }
