--- a/blocks/lead/__description/lead__description.css
+++ b/blocks/lead/__description/lead__description.css
@@ -1,3 +1,11 @@
 .lead__description {
-  padding: 0 20px;
+  padding: 12px 24px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+@media screen and (max-width: 550px) {
+  .lead__description {
+    padding: 12px;
+  }
 }
