--- a/blocks/lead/__list/lead__list.css
+++ b/blocks/lead/__list/lead__list.css
@@ -1,3 +1,14 @@
 .lead__list {
+  width: fit-content;
   display: flex;
+  flex-direction: row;
+  padding: 0 20px;
+  margin: 0;
+}
+@media screen and (max-width: 1150px) {
+  .lead__list {
+    flex-direction: column;
+    list-style: none;
+    padding: 0;
+  }
 }
