--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,19 @@
 .lead__title {
+  margin: 0 16px 8px 0;
+  max-width: 900px;
   font-size: 32px;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 36px;
+}
+@media screen and (max-width: 1200px) {
+  .lead__title {
+    font-size: 24px;
+    line-height: 30px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .lead__title {
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
