--- a/pages/index.css
+++ b/pages/index.css
@@ -46,8 +46,13 @@
 @import url(../blocks/lead/__crump-cansel/lead__crump-cansel.css);
 
 @import url(../blocks/lead/__description/lead__description.css);
+@import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__list/lead__list.css);
 @import url(../blocks/lead/__list-item/lead__list-item.css);
+@import url(../blocks/lead/__btns/lead__btns.css);
+@import url(../blocks/lead/__like-btn/lead__like-btn.css);
+@import url(../blocks/lead/__beld-btn/lead__beld-btn.css);
+@import url(../blocks/lead/__share-btn/lead__share-btn.css);
 
 @import url(../blocks/back-popup/back-popup.css);
 
