--- a/blocks/popup-geo/__back/popup-geo__back.css
+++ b/blocks/popup-geo/__back/popup-geo__back.css
@@ -1,15 +1,7 @@
-.back-popup {
+.popup-geo__back {
   display: none;
+  content: '';
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-  background-color: rgba(31, 31, 31, 0.8);
-  transition: all .5s;
-}
-.back-popup__color {
   z-index: 2;
   top: 0;
   left: 0;
