--- a/blocks/popup-geo/__close-button/popup-geo__close-button.css
+++ b/blocks/popup-geo/__close-button/popup-geo__close-button.css
@@ -2,4 +2,12 @@
   position: absolute;
   right: -36px;
   top: -24px;
+  filter: grayscale(100%);
+  opacity: .65;
+}
+@media screen and (max-width: 550px) {
+  .popup-geo__close-button {
+    right: 5px;
+    top: 12px;
+  }
 }
