--- a/blocks/popup-geo/popup-geo.css
+++ b/blocks/popup-geo/popup-geo.css
@@ -1,27 +1,34 @@
 .popup-geo {
   display: none;
   position: fixed;
-  top: 100px;
-  left: 18%;
-  width: 350px;
-  height: 230px;
+  z-index: 3;
+  top: 40px;
+  left: 27%;
+  right: 27%;
+  height: 250px;
   background-color: rgb(255, 255, 255);
-  border: 2px solid #9db9db;
+  border: 2px solid #929292;
   border-radius: 12px;
   transition: all .3s ease-in-out;
   z-index: 3;
 }
 
-@media screen and (max-width: 1620px) {
+
+@media screen and (max-width: 1100px) {
   .popup-geo {
-    left: 12%;
+    left: 15%;
+    right: 15%;
   }
 }
-
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 600px) {
   .popup-geo {
-    width: 66%;
-    top: 80px;
-    left: 17%;
+    left: 8%;
+    right: 8%;
+  }
+}
+@media screen and (max-width: 400px) {
+  .popup-geo {
+    left: 2%;
+    right: 2%;
   }
 }
