fix: отображение иконок

--- a/blocks/close-btn/close-btn.css
+++ b/blocks/close-btn/close-btn.css
@@ -3,8 +3,7 @@
   border: none;
   width: 28px;
   height: 28px;
-  background: url("../../../img/close-btn-white.png") center/contain no-repeat;
+  background: url("../../../img/closebtnwhite.png") center/contain no-repeat;
   cursor: pointer;
   z-index: 3;
-  filter: invert(1);
 }
