feat: сделан гамбургер

--- a/blocks/popup-geo/popup-geo.css
+++ b/blocks/popup-geo/popup-geo.css
@@ -7,7 +7,7 @@
   right: 27%;
   height: 250px;
   background-color: rgb(255, 255, 255);
-  border: 2px solid #929292;
+  border: none;
   border-radius: 12px;
   transition: all .3s ease-in-out;
   z-index: 3;
