--- a/blocks/close-btn/close-btn.css
+++ b/blocks/close-btn/close-btn.css
@@ -3,7 +3,7 @@
   border: none;
   width: 28px;
   height: 28px;
-  background: url("../../../img/closebtnwhite.png") center/contain no-repeat;
+  background: url("../../../img/close-button.png") center/contain no-repeat;
   cursor: pointer;
   z-index: 3;
 }
