--- a/blocks/search/search.css
+++ b/blocks/search/search.css
@@ -19,6 +19,7 @@
   width: 28px;
   height: 28px;
   background: url("../../../img/closebtn.svg") center/cover no-repeat;
+  filter: invert(30%);
   cursor: pointer;
 }
 
