--- a/blocks/search/search.css
+++ b/blocks/search/search.css
@@ -18,7 +18,7 @@
   -webkit-appearance: none;
   width: 28px;
   height: 28px;
-  background: url("../../../img/closebtn.svg") center/cover no-repeat;
+  background: url("../../img/closebtn.svg") center/cover no-repeat;
   filter: invert(30%);
   cursor: pointer;
 }
