--- a/blocks/container/container.css
+++ b/blocks/container/container.css
@@ -3,3 +3,8 @@
   padding: 45px 0 0 0;
   grid-template-columns: 300px 1fr;
 }
+@media screen and (max-width: 900px){
+  .container {
+    display: block;
+  }
+}
