--- a/blocks/header/__container/header__container.css
+++ b/blocks/header/__container/header__container.css
@@ -18,6 +18,6 @@
 @media screen and (max-width: 1000px) {
   .header__container {
     max-width: 1000px;
-    padding: 0 0 0 24px;
+    padding: 0;
   }
 }
