--- a/blocks/header/__geo/header__geo.css
+++ b/blocks/header/__geo/header__geo.css
@@ -1,3 +1,6 @@
+.geo {
+  position: relative;
+}
 .header__geo {
   width: 200px;
   height: 32px;
@@ -46,5 +49,6 @@
     color: rgba(255, 255, 255, 0);
     width: 32px;
     margin: 0 8px 0 0;
+    display: none;
   }
 }
