--- a/blocks/header/__info/header__info.css
+++ b/blocks/header/__info/header__info.css
@@ -14,12 +14,6 @@
 
 @media screen and (max-width: 620px) {
   .header__info {
-    justify-content: space-evenly;
-  }
-}
-
-@media screen and (max-width: 620px) {
-  .header__info {
-    justify-content: space-around;
+    justify-content: space-between;
   }
 }
