--- a/blocks/popup-geo/__back/popup-geo__back.css
+++ b/blocks/popup-geo/__back/popup-geo__back.css
@@ -1,11 +1,9 @@
 .popup-geo__back {
   display: none;
-  content: '';
   position: fixed;
-  z-index: 2;
   top: 0;
   left: 0;
+  z-index: 3;
   width: 100vw;
-  height: 330px;
-  background: linear-gradient(30deg, #8ec1ff, rgb(123, 255, 255));
+  height: 100vh;
 }
