--- a/blocks/popup-geo/__search/popup-geo__search.css
+++ b/blocks/popup-geo/__search/popup-geo__search.css
@@ -1,9 +1,10 @@
 .popup-geo__search {
-  width: 100%;
-  height: 32px;
+  width: 90%;
+  min-height: 42px;
+  margin: 0 auto 10px auto;
+  border: 2px solid #9db9db;
 }
-@media screen and (max-width: 550px) {
-  .popup-geo__search {
-    width: 90%;
-  }
+.popup-geo__search::placeholder {
+  text-align: start;
+  padding: 0 0 0 20px;
 }
