--- a/blocks/popup-geo/popup-geo.css
+++ b/blocks/popup-geo/popup-geo.css
@@ -1,34 +1,26 @@
 .popup-geo {
+  position: absolute;
   display: none;
-  position: fixed;
-  z-index: 3;
-  top: 40px;
-  left: 27%;
-  right: 27%;
-  height: 250px;
-  background-color: rgb(255, 255, 255);
-  border: none;
-  border-radius: 12px;
+  flex-direction: column;
+  top: 32px;
+  left: 0;
+  padding: 24px 0 0 0;
+  width: 385px;
+  min-height: 300px;
+  background-color: #fbfbfb;
+  box-shadow: 0 0 50px 5px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  overflow: hidden;
   transition: all .3s ease-in-out;
-  z-index: 3;
+  z-index: 11;
 }
-
-
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 680px) {
   .popup-geo {
-    left: 15%;
-    right: 15%;
+    width: 350px;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 620px) {
   .popup-geo {
-    left: 8%;
-    right: 8%;
-  }
-}
-@media screen and (max-width: 400px) {
-  .popup-geo {
-    left: 2%;
-    right: 2%;
+    display: none;
   }
 }
